# poetry_example_for_mac

./: README.md
chiikawa/: .env.example  Dockerfile  core.py  docker-compose.yml  pyproject.toml
chiikawa/mypackage/: base.py
