[tool.poetry]
name = "chiikawa"
version = "0.1.0"
description = "poetry docker env example"
authors = ["bamboo-nova <suzuk1nov11@gmail.com>"]
readme = "README.md"
package-mode = true
packages = [
    { include = "mypackage" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ultralytics = "^8.3.89"
cython = "^3.0.12"
torchreid = "^0.2.5"
gdown = "^5.2.0"
yacs = "^0.1.8"
lap = "^0.5.12"
pyyaml = "^6.0.2"
requests = "^2.32.3"
opencv-python = "^4.11.0.86"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
pillow = "^11.1.0"
joblib = "^1.4.2"
pycocotools = "^2.0.8"
tensorflow = "^2.19.0"
tf_keras = "^2.19.0"

[tool.poetry.group.ml.dependencies]
torch = [
    { version = "=2.2.0", source = "pypi", platform = "darwin" },
    { version = "=2.2.0+cpu", source = "pytorch", platform = "linux" },
    { version = "=2.2.0+cpu", source = "pytorch", platform = "win32" },
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.scripts]
example = "core:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
